<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RenovApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_fragment_books">Livros</string>
    <string name="message_login_empty">Por favor digite o seu login.</string>
    <string name="message_password_empty">Por favor digite a sua senha.</string>
    <string name="title_incorrect_login">Dados incorretos</string>
    <string name="message_incorrect_login">O login ou a senha não estão corretos.</string>
    <string name="title_connection_error">Sem conexão</string>
    <string name="message_connection_error">Certifique-se que está conectado à internet.</string>
    <string name="message_no_connection">Sem conexão.</string>
    <string name="message_login_progress">Conectando…</string>
    <string name="message_book_list_empty">Sem livros, toque para carregar.</string>
    <string name="message_book_renewing">Renovando…</string>
    <string name="message_session_expired">A sua sessão espirou.</string>
    <string name="message_unprocessable_response">Não foi possível processar a resposta.</string>
    <string name="title_activity_app">RenovApp</string>
    <string name="hello_blank_fragment">Settings</string>
    <string name="preference_file_key">prefs</string>
    <string name="preference_login">pref_login</string>
    <string name="preference_password">pref_password</string>
    <string name="preference_notifications">pref_notifications</string>
    <string name="logout_preference_title">Sair</string>
    <string name="logout_preference_summary">Ir para tela de login</string>
    <string name="share_preference_title">Compartilhar</string>
    <string name="rate_preference_title">Avaliar</string>
    <string name="preference_first_run">pref_first_run</string>
    <string name="contribute_preference_title">Contribuir</string>
    <string name="contribute_preference_summary">Código-fonte, bugs</string>
    <string name="version_preference_title">Versão</string>
    <string name="dialog_negative_text">Cancelar</string>
    <string name="leave_dialog_title">Sair?</string>
    <string name="leave_dialog_message">Se sair não poderá mais receber notificações.</string>
    <string name="leave_dialog_positive_text">Sair</string>
    <string name="number_picker_dialog_positive_text">OK</string>
    <string name="title_generic_error">Erro</string>
    <string name="notification_preference_title">Notificar</string>
    <string name="notification_preference_dialog_title">Antecedência</string>
    <string name="market_url">market://details?id=br.ufu.renova</string>
    <string name="github_url">https://github.com/ynurmahomed/renova"</string>
    <string name="share_summary">Renove seus livros na biblioteca UFU com um toque - https://play.google.com/store/apps/details?id=br.ufu.renova</string>

</resources>
